tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_constants_flags_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - constants
    - "-t"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
