tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_crawk_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::Analyzer
crate::analyzer::expand_groups
crate::cache::ParseCache
crate::constants::ATTR_CFG
crate::constants::LIB_FILE_NAME
crate::constants::MAIN_FILE_NAME
crate::constants::MODULE_FILE_NAME
crate::constants::MODULE_NAME_TEST
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
crate::discover::CrateInfo
crate::discover::CrateInfoError
crate::discover::ModuleInfo
crate::discover::ModuleVisibility
crate::discover::ModuleVisibility::Public
crate::discover::Result
crate::discover::TargetInfo
crate::discover::TargetKind
crate::error::AnalysisError
crate::error::AnalysisError::ModuleNotFound
crate::error::Result
crate::graph
crate::graph::AnnotatedEdges
crate::graph::Cycle
crate::graph::DependencyGraph
crate::graph::DependencyGraphOptions
crate::graph::Edge
crate::graph::ShortestPaths
crate::graph::build_edges
crate::graph::compute_shortest_paths
crate::graph::cycles::Cycle
crate::graph::cycles::detect_cycles
crate::graph::detect_cycles
crate::graph::edges
crate::graph::edges::AnnotatedEdges
crate::graph::edges::Edge
crate::graph::edges::build_edges
crate::graph::edges::find_module_target
crate::graph::edges::resolve_reference_target
crate::graph::edges::truncate_module_path
crate::graph::find_orphans
crate::graph::orphans::find_orphans
crate::graph::paths::ShortestPaths
crate::graph::paths::compute_shortest_paths
crate::graph::resolve_reference_target
crate::graph::truncate_module_path
crate::model::AnalysisOptions
crate::model::AnalysisResult
crate::module_path::is_in_subtree
crate::module_path::parent_module
crate::module_path::split_parent
crate::parser::AnalyzerError
crate::parser::CrateAnalyzer
crate::parser::Result
crate::parser::visitor
crate::parser::visitor::CollectedReferences
crate::parser::visitor::ModuleVisitor
crate::parser::visitor::resolve_reference
crate::reference::GroupItem
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix
crate::reference::PathPrefix::Crate
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::PathSuffix
crate::reference::PathSuffix::Group
crate::reference::Segments
crate::reference::TypeReference
crate::resolve::extract_public_items
crate::resolve::resolve_glob
crate::rules
crate::rules::AllowedCycle
crate::rules::CheckOptions
crate::rules::CheckReport
crate::rules::DenyRule
crate::rules::InitOutcome
crate::rules::LayerPos
crate::rules::LayerRule
crate::rules::ModulePattern
crate::rules::RestrictRule
crate::rules::RuleSet
crate::rules::Violation
crate::rules::ViolationKind
crate::rules::ViolationKind::Cycle
crate::rules::ViolationKind::Deny
crate::rules::ViolationKind::Layer
crate::rules::ViolationKind::Restrict
crate::rules::eval::evaluate
crate::rules::evaluate
crate::rules::is_parent_child_cycle
crate::rules::load::resolve_config_path
crate::rules::load::scaffold
crate::rules::load::scaffold_config
crate::rules::resolve_config_path
crate::rules::scaffold_config
crate::utils::MAX_FILE_BYTES
crate::utils::ReadFileError
crate::utils::ReadFileError::TooLarge
crate::utils::descend_inline_module
crate::utils::has_cfg_test
crate::utils::read_source_file

----- stderr -----
